# charleston-lean-meetup

./: CharlestonLeanMeetup.lean  Main.lean  README.md  _config.yml  lake-manifest.json  lakefile.lean  real1.txt  real3.txt  real4.txt
CharlestonLeanMeetup/: Answers20240709.lean  Notes20240114.lean  Notes20240611.lean  Notes20240709.lean  Notes20240813.lean  Notes20240910.lean  Notes20241008.lean  Notes20241112.lean  Notes20250114.lean
CharlestonLeanMeetup/2024-09/: tactics.lean
CharlestonLeanMeetup/2025-02-AI/lean_ai/: .gitignore  README.md  pyproject.toml
CharlestonLeanMeetup/2025-02-AI/lean_ai/examples/: aime_easy.csv  lean_solve.py  mathlib_to_finetuning.py
CharlestonLeanMeetup/2025-02-AI/lean_ai/src/lean_ai/: main.py  minimal.py
CharlestonLeanMeetup/2025-02-AI/lean_ai/src/lean_ai/prompts/: prompt.txt
CharlestonLeanMeetup/2025-09-08/: README.md
CharlestonLeanMeetup/2025-09-08/mcp_server/: mcp_server.py  pyproject.toml
notes/: 2024-06-11.md  2024-08-13.md
